2008-04-13  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_option_menu_set),
	(wp_scale_type_changed), (wp_shade_type_changed),
	(wp_options_changed), (wp_shading_changed), (wp_props_wp_set),
	(wp_load_stuffs):
	* data/appearance.glade:
	* gnome-wp-item.c: (wp_item_option_to_string),
	(wp_item_shading_to_string), (wp_item_string_to_option),
	(wp_item_string_to_shading), (set_bg_properties),
	(gnome_wp_item_update), (gnome_wp_item_free):
	* gnome-wp-item.h:
	* gnome-wp-xml.c: (gnome_wp_xml_load_xml),
	(gnome_wp_xml_save_list): use the GnomeBG enum types instead of
	strings to handle options internally and only convert when needed

2008-04-08  Jens Granseuer  <jensgr@gmx.net>

	* gedit-message-area.h: fix include (sync with gedit)

2008-03-28  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (gnome_theme_install_from_uri): don't try to
	unref URIs if the theme package is invalid (bug #524567)

2008-03-27  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (gnome_theme_install_real): remove bogus flag
	(gnome_theme_install_from_uri): update for internal API change

2008-03-27  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Patrick Wade <patrick.wade@sun.com>

	* appearance-themes.c: (custom_font_cb),
	(theme_message_area_response_cb), (theme_message_area_update),
	(themes_init), (themes_shutdown):
	* appearance.h: allow the user to revert a font change proposed by a
	metatheme (bug #519065)

2008-03-19  Jens Granseuer  <jensgr@gmx.net>

	* data/appearance.glade: don't declare the backgrounds icon view
	reorderable. It's not. Besides, setting this property breaks the
	custom drag and drop functionality (bug #523347). This fixes the
	critical warning when trying to drag an unselected item, but it looks
	like the new nautilus doesn't support background drag and drop, anyway

2008-03-11  Jens Granseuer  <jensgr@gmx.net>

	* data/appearance.glade: don't resize the font samples vertically when
	the window is resized (bug #521823)
