@@ -1,3 +1,13 @@
+2008-04-14  Thomas Wood  <thos@gnome.org>
+
+	* Makefile.am:
+	* appearance-themes.c: (themes_init):
+	* caption-cellrenderer.c:
+	* caption-cellrenderer.h:
+
+	Add a custom cell renderer for metatheme names to allow rounded corners
+	on the selection indicator. Fixes bug 500276.
+
 2008-04-13  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-desktop.c: (wp_option_menu_set),
